@@ -1,14 +1,14 @@
 package com.yanggu.metric_calculate.core.aggregate_function.map;
 
-import com.yanggu.metric_calculate.core.aggregate_function.annotation.MapType;
 import com.yanggu.metric_calculate.core.aggregate_function.annotation.AggregateFunctionAnnotation;
+import com.yanggu.metric_calculate.core.aggregate_function.annotation.AggregateFunctionFieldAnnotation;
+import com.yanggu.metric_calculate.core.aggregate_function.annotation.MapType;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 
 import java.util.AbstractMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 /**
@@ -27,15 +27,17 @@ import java.util.stream.Collectors;
 public class SortValueReturnValueMapAggregateFunction<K, V, ValueACC, ValueOUT extends Comparable<ValueOUT>>
         extends AbstractMapAggregateFunction<K, V, ValueACC, ValueOUT, List<ValueOUT>> {
 
+    @AggregateFunctionFieldAnnotation(displayName = "长度限制")
     private Integer limit = 10;
 
+    @AggregateFunctionFieldAnnotation(displayName = "true升序，false降序")
     private Boolean asc = true;
 
     @Override
     public List<ValueOUT> getResult(Map<K, ValueACC> accumulator) {
         return getCompareLimitStream(accumulator, asc, limit)
                 .map(AbstractMap.SimpleImmutableEntry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
